[gd_scene load_steps=7 format=3 uid="uid://dyxfppw2rop6g"]

[ext_resource type="Texture2D" uid="uid://btvoq4orlliwo" path="res://assets/Celular.png" id="1_e3yxn"]
[ext_resource type="Script" uid="uid://dj46hgojyi8hl" path="res://scripts/celular.gd" id="1_v5ui1"]
[ext_resource type="AudioStream" uid="uid://cwtt2bynhqdk2" path="res://sounds/celular dialogo 1.mp3" id="3_dvwmu"]
[ext_resource type="AudioStream" uid="uid://bo0u1hvrkqau8" path="res://sounds/calular dialogo 2.mp3" id="4_nhy5b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5ui1"]
bg_color = Color(0.156863, 0.219608, 0.32549, 0.501961)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyj7d"]
size = Vector2(59, 93)

[node name="Celular" type="Area2D"]
script = ExtResource("1_v5ui1")

[node name="SpriteCelular" type="Sprite2D" parent="."]
position = Vector2(0, 1.90735e-06)
scale = Vector2(0.0903615, 0.0903615)
texture = ExtResource("1_e3yxn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="caixa_dialogo" type="Label" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 454.0
offset_right = 1124.0
offset_bottom = 604.0
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxFlat_v5ui1")
vertical_alignment = 1
autowrap_mode = 2

[node name="texto_dialogo" type="Label" parent="CanvasLayer"]
offset_left = 63.0
offset_top = 467.0
offset_right = 1084.0
offset_bottom = 587.0
theme_override_font_sizes/font_size = 20
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="CollisionInteracao" type="CollisionShape2D" parent="."]
position = Vector2(-14.5, 8.5)
shape = SubResource("RectangleShape2D_nyj7d")

[node name="label_interacao" type="Label" parent="."]
offset_left = -105.0
offset_top = -76.0
offset_right = 105.0
offset_bottom = -53.0
text = "Pressione 'E' para interagir"

[node name="cecular_fala1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dvwmu")

[node name="cecular_fala2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nhy5b")
